# photo_processing

./: CMakeLists.txt  main.cpp  thread_pool.cpp  thread_pool.h
